--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+button:hover {
+  background: #0ea5e9;
+}
+
+body {
+  background-color: white;
+  font-family: Arial, sans-serif;
+}
